move tooltip up to avoid being clipped

--- a/resources/sass/field.scss
+++ b/resources/sass/field.scss
@@ -66,16 +66,8 @@
 }
 
 [data-balloon]:after {
-	filter: alpha(opacity=0);
-	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
-	-moz-opacity: 0;
-	-khtml-opacity: 0;
 	opacity: 0;
 	pointer-events: none;
-	-webkit-transition: all 0.18s ease-out 0.18s;
-	-moz-transition: all 0.18s ease-out 0.18s;
-	-ms-transition: all 0.18s ease-out 0.18s;
-	-o-transition: all 0.18s ease-out 0.18s;
 	transition: all 0.18s ease-out 0.18s;
 	font-family: sans-serif !important;
 	font-weight: normal !important;
@@ -98,16 +90,8 @@
 	background-size: 100% auto;
 	width: 18px;
 	height: 6px;
-	filter: alpha(opacity=0);
-	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
-	-moz-opacity: 0;
-	-khtml-opacity: 0;
 	opacity: 0;
 	pointer-events: none;
-	-webkit-transition: all 0.18s ease-out 0.18s;
-	-moz-transition: all 0.18s ease-out 0.18s;
-	-ms-transition: all 0.18s ease-out 0.18s;
-	-o-transition: all 0.18s ease-out 0.18s;
 	transition: all 0.18s ease-out 0.18s;
 	content: '';
 	position: absolute;
@@ -115,10 +99,6 @@
 }
 
 [data-balloon]:hover:before, [data-balloon]:hover:after {
-	filter: alpha(opacity=100);
-	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
-	-moz-opacity: 1;
-	-khtml-opacity: 1;
 	opacity: 1;
 	pointer-events: auto;
 }
@@ -126,10 +106,7 @@
 [data-balloon]:after {
 	left: 50%;
 	margin-top: 11px;
-	top: 100%;
-	-webkit-transform: translate(-50%, -10px);
-	-moz-transform: translate(-50%, -10px);
-	-ms-transform: translate(-50%, -10px);
+	top: -20%;
 	transform: translate(-50%, -10px);
 }
 
@@ -140,23 +117,14 @@
 	height: 6px;
 	left: 50%;
 	margin-top: 5px;
-	top: 100%;
-	-webkit-transform: translate(-50%, -10px);
-	-moz-transform: translate(-50%, -10px);
-	-ms-transform: translate(-50%, -10px);
+	top: -20%;
 	transform: translate(-50%, -10px);
 }
 
 [data-balloon]:hover:after {
-	-webkit-transform: translate(-50%, 0);
-	-moz-transform: translate(-50%, 0);
-	-ms-transform: translate(-50%, 0);
 	transform: translate(-50%, 0);
 }
 
 [data-balloon]:hover:before {
-	-webkit-transform: translate(-50%, 0);
-	-moz-transform: translate(-50%, 0);
-	-ms-transform: translate(-50%, 0);
 	transform: translate(-50%, 0);
 }
